# BershawRecruitment

./: .gitignore  Bershaw_Recruitment_Complete_Workflow.html  CHALLENGES_IMPLEMENTED.md  CHECKPOINT.md  COMPETITIVE_ANALYSIS.md  COMPLETE_WORKFLOW.md  DATABASE_SETUP_OPTIONS.md  DATABASE_SETUP_SUMMARY.md  DOCKER_SETUP_GUIDE.md  GDPR_COMPLIANCE.md  NEXT_STEPS.md  PDF_CONVERSION_INSTRUCTIONS.md  POLICIES_COMPLIANCE.md  PROJECT_ANALYSIS.md  README.md  SCHEMA_MIGRATION.md  START_DATABASE.ps1  WORKFLOW_DIAGRAM_REVIEW.md  WORKFLOW_PDF_README.txt  WORKFLOW_SUMMARY.md  WORKFLOW_VISUAL.md  create_pdf_direct.py  create_simple_pdf.py  generate_workflow_pdf.py  netlify.toml
recruit-assist-api/: .env.example  AUTOMATION_IMPLEMENTATION.md  AUTOMATION_INTEGRATION_GUIDE.md  AUTOMATION_QUICK_START.md  CANDIDATE_PROFILE_ENDPOINTS.md  CURRENT_WORKFLOW.md  DATABASE_SETUP.md  DATABASE_SETUP_GUIDE.md  Dockerfile  JOB_POSTING_ENDPOINTS.md  MATCHING_ALGORITHM.md  NOTES.md  PROJECT_SUMMARY.md  QUICK_DATABASE_SETUP.md  README.md  START_SERVER.md  TESTING_GUIDE.md  alembic.ini  pyproject.toml  pytest.ini  setup_database.py  setup_database_sqlite.py  start_server.bat  test_real_cvs.py  test_system_integration.py
recruit-assist-api/alembic/: env.py
recruit-assist-api/app/: __init__.py  database.py  db_models.py  db_schemas.py  exceptions.py  main.py  models.py  settings.py
recruit-assist-api/app/routers/: candidates.py  compliance.py  email.py  endorsement.py  ingest.py  interview_scheduling.py  jobs.py  linkedin_automation.py  matching.py  normalize.py  outreach.py  profiles.py  tone.py
(+55 files in other folders)
