[project]
name = "recruit-assist-api"
version = "0.1.0"
description = "FastAPI skeleton for CV ingest, JD normalization, and endorsement generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.9",
  "openai>=1.51.0",
  "python-dotenv>=1.0.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true

